--- a/.env
+++ b/.env
@@ -8,7 +8,12 @@ DEBUG=True
 # Token dostępu do aplikacji weselnej (WAŻNE!)
 # Zmień na unikalny token dla swojego wesela
 WEDDING_ACCESS_TOKEN=ZH5HTQ6AUF1M
+CLOUDINARY_CLOUD_NAME=dyhut79dn
+CLOUDINARY_API_KEY=296634227654898
+CLOUDINARY_API_SECRET=QXLbTjhdjiV3TmwvaXUXY1JsKqM
 
+# Włącz Cloudinary w produkcji
+USE_CLOUDINARY=True
 # Przykłady tokenów:
 # WEDDING_ACCESS_TOKEN=ANNA_TOMEK_2024
 # WEDDING_ACCESS_TOKEN=WESELE_WARSZAWA_15092024
@@ -23,7 +28,6 @@ WEDDING_ACCESS_TOKEN=ZH5HTQ6AUF1M
 # EMAIL_HOST_PASSWORD=your-app-password
 # DEFAULT_FROM_EMAIL=wesele@yourdomain.com
 # ADMIN_EMAIL=admin@yourdomain.com
-
 # Database (SQLite domyślnie, nie musisz zmieniać dla małych wesel)
 # DATABASE_URL=sqlite:///db.sqlite3
 
