--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-Django==4.2.7
-Pillow==10.1.0
-python-decouple==3.8
-django-crispy-forms==2.1
+asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudinary==1.44.1
 crispy-bootstrap4==2022.1
-qrcode==8.2
-whitenoise==6.6.0
-gunicorn==21.2.0
 dj-database-url==3.0.1
+Django==4.2.7
+django-cloudinary-storage==0.3.0
+django-crispy-forms==2.1
+gunicorn==21.2.0
+idna==3.10
+packaging==25.0
+Pillow==10.1.0
 psycopg2-binary==2.9.6
+python-decouple==3.8
+qrcode==8.2
+requests==2.32.5
+six==1.17.0
+sqlparse==0.5.3
+typing_extensions==4.15.0
+urllib3==2.5.0
+whitenoise==6.6.0
